fix(audioInput): info screen scrolling and spacing and audio interrupted alert

--- a/src/app/pages/questions/components/question/info-screen/info-screen.component.scss
+++ b/src/app/pages/questions/components/question/info-screen/info-screen.component.scss
@@ -39,7 +39,7 @@ info-screen {
   }
 
   .info-content {
-    margin-bottom: 64%;
+    margin-bottom: 56%;
   }
 
   .icon-thincIt {
